Fix resume download link path to use forward slash

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <!--<a href="http://drv.tw/FEB_VASHU_Resume_2025.pdf" class="btn" target="_blank">Download CV</a>-->
             <!--<a href="Images/FEB_VASHU_Resume_2025.pdf" class="btn" download>Download CV</a>-->
-            <a href="Images/JUNE_VASHU_Resume_2025.pdf" class="btn" download>Download CV</a>
+            <a href="D:\Vashu\BCA (Vashu)\VSCode\Portfolio\JUNE_VASHU_Resume_2025.pdf" class="btn" download>Download CV</a>
 
         </div>
 
